# game_data_orchestration

./: .gitignore  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
config/: games.yaml  pipelines.yaml
src/: __init__.py  ingestion.py  load_to_postgres.py
src/application/: __init__.py  gungeon_curation.py  loader.py  lua_ingestion.py  writer.py
src/domain/: __init__.py  config.py  schemas.py
src/infrastructure/: __init__.py  html_source_client.py  http_client.py  lua_parser.py
